[tool.black]
line-length = 120

[tool.poetry]
name = "realtime-api-plus"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.11"
azure-cognitiveservices-speech = "^1.43.0"
numpy = "^2.1.2"
rtclient = {url = "https://github.com/Azure-Samples/aoai-realtime-audio-sdk/releases/download/py%2Fv0.5.2/rtclient-0.5.2-py3-none-any.whl"}


[tool.poetry.group.dev.dependencies]
aiohttp-devtools = "^1.1.2"


[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
